--- a/lib/red_social_web/controllers/accounts/user_html/show.html.heex
+++ b/lib/red_social_web/controllers/accounts/user_html/show.html.heex
@@ -2,21 +2,24 @@
   <.header>
     User {@user.id}
     <:subtitle>This is a user record from your database.</:subtitle>
+    
     <:actions>
-      <.button navigate={~p"/users"}>
-        <.icon name="hero-arrow-left" />
-      </.button>
+      <.button navigate={~p"/users"}><.icon name="hero-arrow-left" /></.button>
       <.button variant="primary" navigate={~p"/users/#{@user}/edit?return_to=show"}>
         <.icon name="hero-pencil-square" /> Edit user
       </.button>
     </:actions>
   </.header>
-
+  
   <.list>
     <:item title="Username">{@user.username}</:item>
+    
     <:item title="Email">{@user.email}</:item>
+    
     <:item title="Name">{@user.name}</:item>
+    
     <:item title="Type">{@user.type}</:item>
+    
     <:item title="Bio">{@user.bio}</:item>
   </.list>
 </Layouts.app>
